--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -21,6 +21,12 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: x64
 
+      - uses: BSFishy/pip-action@v1
+        with:
+          packages: |
+            openpyxl
+            pyinstaller
+      
       - uses: actions/checkout@v2
 
       - name: Build clacium converter
