--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -35,5 +35,5 @@ jobs:
       - name: Publish release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: auto-build-${{ github.run_number }}
-          files: ${{ env.RELEASE_FILE_NAME_STEM }}.exe
+          tag_name: auto-build-windows-${{ github.run_number }}
+          files: dist/${{ env.RELEASE_FILE_NAME_STEM }}.exe
